[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/benches/Furnace.png" type="Texture" id=1]
[ext_resource path="res://scenes/furnace/Furnace.gd" type="Script" id=2]
[ext_resource path="res://scenes/abstractions/Storage.gd" type="Script" id=3]
[ext_resource path="res://themes/Main.tres" type="Theme" id=4]
[ext_resource path="res://sounds/PuttingItemInFurnace.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/Bellows.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/PickingUpItemFromFurnace.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/Fire.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 42.6606

[node name="Furnace" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="FurnaceSprite" type="Sprite" parent="."]
position = Vector2( -1, -1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -74.5795
margin_top = -64.236
margin_right = 75.4205
margin_bottom = -45.236
theme = ExtResource( 4 )
custom_constants/separation = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temperature" type="ProgressBar" parent="HBoxContainer"]
visible = false
margin_right = 150.0
margin_bottom = 22.0
size_flags_horizontal = 3
max_value = 1000.0
step = 1.0

[node name="MeltingProgress" type="ProgressBar" parent="HBoxContainer"]
visible = false
margin_right = 150.0
margin_bottom = 22.0
size_flags_horizontal = 3
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemperatureTimer" type="Timer" parent="."]

[node name="ProgressTimer" type="Timer" parent="."]

[node name="Storage" type="Node" parent="."]
script = ExtResource( 3 )

[node name="MetalSprite" type="Sprite" parent="."]
position = Vector2( 9, 16 )

[node name="PuttingItemInFurnace" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Bellows" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
bus = "SFX"

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="PickingUpItemFromFurnace" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 15.0
bus = "SFX"
[connection signal="timeout" from="TemperatureTimer" to="." method="temperature_decrease_timer"]
[connection signal="timeout" from="ProgressTimer" to="." method="melting_progress_timer"]
